--- a/task.html
+++ b/task.html
@@ -9,19 +9,19 @@
 <body>
     <div class="parent">
         <div class="child one">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
         <div class="child two">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
         <div class="child three">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
         <div class="child four">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
     </div>
@@ -60,19 +60,19 @@
     </div>
     <div class="parent1">
         <div class="child five">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
         <div class="child six">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
         <div class="child seven">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
         <div class="child eight">
-            <img src="../../Img_1.png" alt="">
+            <img src="Img_1.png" alt="">
 
         </div>
     </div>
